--- a/package.json
+++ b/package.json
@@ -59,8 +59,7 @@
     "vite": "^4.4.5"
   },
   "peerDependencies": {
-    "react": ">=16.0.0",
-    "typescript": ">=4.0.0"
+    "react": ">=16.0.0"
   },
   "plugins": [
     "@semantic-release/commit-analyzer",
