--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "license": "MIT",
-  "typings": "dist/index.d.ts",
   "main": "dist/index.js",
+  "typings": "dist/index.d.ts",
   "repository": {
     "url": "https://github.com/abelborit/react-typescript-storybook-app",
     "type": "git"
@@ -16,8 +16,7 @@
     ]
   },
   "files": [
-    "dist",
-    "src"
+    "dist/"
   ],
   "scripts": {
     "dev": "npm run storybook",
@@ -29,11 +28,10 @@
     "clean": "rimraf dist/",
     "copy-files": "copyfiles -u 1 src/**/*.css dist/"
   },
-  "dependencies": {
-    "react": ">=16.0.0",
-    "react-dom": "^18.2.0"
-  },
+  "dependencies": {},
   "devDependencies": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "@storybook/addon-essentials": "^7.4.6",
     "@storybook/addon-interactions": "^7.4.6",
     "@storybook/addon-links": "^7.4.6",
@@ -59,7 +57,8 @@
     "vite": "^4.4.5"
   },
   "peerDependencies": {
-    "react": ">=16.0.0"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "plugins": [
     "@semantic-release/commit-analyzer",
