--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,12 +5,15 @@
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "declaration": true,
-    "module": "ES2015",
+    "module": "ESNext",
     "skipLibCheck": true,
+    "allowJs": true,
+    "emitDeclarationOnly": false,
+    "declarationMap": false,
 
     /* Bundler mode */
     "moduleResolution": "bundler",
-    // "allowImportingTsExtensions": true,
+    "allowImportingTsExtensions": false,
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": false,
